--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "homepage": "https://EngrAbdulMueed.github.io/portfolio",
+  "homepage": "https://EngrAbdulMueed.github.io/Portfolio_git/",
   "author": "Muhammad Abdul Mueed <engr.mabdulmueed@gmail.com>",
   "repository": {
     "type": "git",
