--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "homepage": "https://EngrAbdulMueed.github.io/Portfolio_git/",
-  "author": "Muhammad Abdul Mueed <engr.mabdulmueed@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bchiang7/v4"
-  },
+  "homepage": "https://EngrAbdulMueed.github.io/newest/",
   "keywords": [
     "gatsby"
   ],
